styles/widgets/base/scheduler.less
/* ... */
.dx-scheduler-scrollable-offset-mixin(@padding, @allDayHeight, @collapsedAllDayHeight) {
    .dx-scheduler-group-mixin(@padding);

    &.dx-scheduler-work-space-all-day {
        .dx-scheduler-group-mixin(@padding + @allDayHeight);
    }

    &.dx-scheduler-work-space-all-day-collapsed {
        .dx-scheduler-group-mixin(@padding + @collapsedAllDayHeight);
    }
}

.dx-scheduler-all-day-title-mixin(@baseTop) {

    &[dx-group-row-count='1'] {
        @TOP_OFFSET: @baseTop + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT;

        .dx-scheduler-all-day-title {
            top: @TOP_OFFSET;

            &:before {
                top: -@TOP_OFFSET + 55px;
                height: @TOP_OFFSET - @SCHEDULER_DEFAULT_HEADER_HEIGHT;
            }
        }
    }

    &[dx-group-row-count='2'] {
        @TOP_OFFSET: @baseTop + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 2;

        .dx-scheduler-all-day-title {
            top: @TOP_OFFSET;

            &:before {
                top: -@TOP_OFFSET + 55px;
                height: @TOP_OFFSET - @SCHEDULER_DEFAULT_HEADER_HEIGHT;
            }
        }
    }

    &[dx-group-row-count='3'] {
        @TOP_OFFSET: @baseTop + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 3;

        .dx-scheduler-all-day-title {
            top: @TOP_OFFSET;

            &:before {
                top: -@TOP_OFFSET + 55px;
                height: @TOP_OFFSET - @SCHEDULER_DEFAULT_HEADER_HEIGHT;
            }
        }
    }
}

.dx-scheduler-header-scrollable-mixin(@baseHeight) {
    &[dx-group-row-count='1'] {
        .dx-scheduler-header-scrollable {
            height: @baseHeight + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT + 1;
        }
    }

    &[dx-group-row-count='2'] {
        .dx-scheduler-header-scrollable {
            height: @baseHeight + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 2 + 1;
        }
    }

    &[dx-group-row-count='3'] {
        .dx-scheduler-header-scrollable {
            height: @baseHeight + @SCHEDULER_GROUP_HEADER_TABLE_CELL_HEIGHT * 3 + 1;
        }
    }

    .dx-scheduler-header-scrollable {
        height: @baseHeight + 1px;
    }
}

.dx-scheduler-timeline-group-table-mixin() {
    .set-size(@size) {
        .dx-scheduler-group-table,
        .dx-scheduler-sidebar-scrollable,
        .dx-scheduler-sidebar-scrollable:before {
            width: @size;
        }

        .dx-scheduler-date-table-scrollable,
        .dx-scheduler-header-scrollable {
            margin-left: @size;

            .dx-rtl & {
                margin-right: @size;
                margin-left: 0;
            }
        }

        .dx-scheduler-fixed-appointments {
            left: @size;
        }
    }

    .dx-scheduler-work-space-both-scrollbar {
        .dx-scheduler-date-table-scrollable {
            margin-left: 0;
        }

        .dx-scheduler-header-scrollable.dx-scrollable {
            margin: 0;
            padding: 0;

            .dx-rtl & {
                margin: 0;
            }
        }
    }

    &[dx-group-column-count='1'] {
        .set-size(100px);
    }

    &[dx-group-column-count='2'] {
        .set-size(160px);
    }

    &[dx-group-column-count='3'] {
        .set-size(180px);
    }
}

.dx-scheduler-appointment-focused-mixin() {
    &.dx-state-focused {
        .box-shadow(none);

        &:before {
            pointer-events: none;
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            right: 0;
            bottom: 0;
        }
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
    }
}
// T314382
.dx-scheduler-appointment-focused-mixin() when not (@SCHEDULER_FILL_FOCUSED_APPOINTMENT = true) {
    &.dx-state-focused {
        &:before {
            background-color: @SCHEDULER_APPOINTMENT_START_COLOR;
            opacity: .98;
        }
    }
}

.dx-scheduler-appointment-form-field-item-mixin() {
    .dx-field-item {
        padding-left: @SCHEDULER_APPOINTMENT_DETAILS_FORM_HORIZONTAL_OFFSET;
        padding-right: @SCHEDULER_APPOINTMENT_DETAILS_FORM_HORIZONTAL_OFFSET;
    }
}

.dx-scheduler-fixed-appointments {
    z-index: 100;
    position: absolute;
    left: @SCHEDULER_LEFT_COLUMN_WIDTH;

    .dx-scheduler-small & {
        left: @SCHEDULER_LEFT_COLUMN_WIDTH * @SCHEDULER_SMALL_SIZE_FACTOR;
    }
}

.dx-scheduler-header {
    position: relative;
    z-index: 1;
    width: 100%;
}

.dx-scheduler-navigator {
    float: left;
    padding-left: @SCHEDULER_NAVIGATOR_OFFSET;
    white-space: nowrap;

    .dx-device-mobile & {
        padding-left: @SCHEDULER_NAVIGATOR_OFFSET * 0.5;
    }

    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH;
    max-width: 40%;
}

.dx-scheduler-navigator-caption {
    width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH;
    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH * 0.6;
    max-width: 80%;

    .dx-device-mobile & {
        width: @SCHEDULER_MOBILE_NAVIGATOR_CAPTION_WIDTH;
    }
}

.dx-calendar.dx-scheduler-navigator-calendar {
    width: 100%;
    height: 100%;
}

.dx-scheduler-view-switcher.dx-tabs {
    max-width: 52%;
    min-width: @SCHEDULER_NAVIGATOR_CAPTION_WIDTH * 0.4;
    width: auto;
    float: right;
    height: 100%;
    border: none;

    .dx-scheduler-small & {
        display: none;
    }

    .dx-tabs-scrollable .dx-tabs-wrapper {
        border-bottom: none;
    }

    .dx-tab {
        width: @SCHEDULER_SWITCHER_TAB_WIDTH;

        &.dx-tab-selected:before {
            position: absolute;
            bottom: -2px;
            width: 100%;
            height: 2px;
            content: '';
            right: 0;
        }

        &.dx-state-focused:after {
            border-bottom: none;
        }
    }
}

.dx-scheduler-view-switcher.dx-dropdownmenu.dx-button {
    position: absolute;
    right: @SCHEDULER_SWITCHER_OFFSET;
}

.dx-scheduler-view-switcher-label {
    position: absolute;
}
/* ... */

